--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 	<string name="app_name">空氣污染</string>
 	<string name="good_substitute">The status is good, we want to go out to have fun</string>
 	<string name="detail_information">詳細資訊</string>
+	<string name="record_detail">%s空氣品質%s</string>
 	<string name="action_search">搜尋</string>
 	<string name="search_hint">請輸入「站名」</string>
 </resources>
