functionality of SearchActivity
Search records with site name and county.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
 	<string name="record_detail">%s空氣品質%s</string>
 	<string name="action_search">搜尋</string>
 	<string name="search_hint">請輸入「站名」</string>
+	<string name="input_search">請輸入「站名」\n查詢該地區空汙資訊</string>
+	<string name="search_empty">找不到「%s」\n相關的空汙資訊</string>
 </resources>
